--- a/src/main/resources/templates/show-one-product-page.html
+++ b/src/main/resources/templates/show-one-product-page.html
@@ -1,11 +1,10 @@
 <html xmlns:th="https://www.thymeleaf.org">
 	<body>
-		<p>Test product from JAVA</p>
+		<p>Product from JAVA</p>
 		<p th:text="${box.id}"></p>
 		<p th:text="${box.title}"></p>
 		<p th:text="${box.price}"></p>
 		<p th:text="${box.description}"></p>
 		<p th:text="${box.quantity}"></p>
-		<p th:text="${box.toString()}"></p>
 	</body>
 </html>
