--- a/src/main/resources/templates/create-product-page.html
+++ b/src/main/resources/templates/create-product-page.html
@@ -6,21 +6,25 @@
 		<tr> 
 			<td> Write title here: </td>
 			<td>  <input type="text" th:field="*{title}"    />    </td>
+			<td th:if="${#fields.hasErrors('title')}" th:errors="*{title}" > </td>
 		</tr>
 		
 		<tr> 
 			<td> Write price here: </td>
 			<td>  <input type="text" th:field="*{price}"    />    </td>
+			<td th:if="${#fields.hasErrors('price')}" th:errors="*{price}" > </td>
 		</tr>
 		
 		<tr> 
 			<td> Write description here: </td>
 			<td>  <input type="text" th:field="*{description}"    />    </td>
+			<td th:if="${#fields.hasErrors('description')}" th:errors="*{description}" > </td>
 		</tr>
 		
 		<tr> 
 			<td> Write quantity here: </td>
 			<td>  <input type="text" th:field="*{quantity}"    />    </td>
+			<td th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}" > </td>
 		</tr>
 		
 		<tr>
