Add: added controller for Sem5 (not finished)

--- a/src/main/resources/templates/show-all-product-page.html
+++ b/src/main/resources/templates/show-all-product-page.html
@@ -1,6 +1,6 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <body>
-	<p>All product from JAVA</p>
+	<p>Products:</p>
 
 	<table border="1">
 		<tr th:each="temp : ${box}">
