--- a/src/main/resources/templates/data-page.html
+++ b/src/main/resources/templates/data-page.html
@@ -1,6 +1,6 @@
 <html xmlns:th="https://www.thymeleaf.org">
 	<body>
-		<p>Data from JAVA</p>
+		<p>AVG grade:</p>
 		<p th:text="${box}"></p>
 
 	</body>
